fixes gap reponsive home

--- a/src/styles/components/CardsGallery.css
+++ b/src/styles/components/CardsGallery.css
@@ -31,7 +31,7 @@
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(2, 1fr);
         grid-column-gap: 50px;
-        grid-row-gap: 56px;
+        grid-row-gap: 1rem;
         padding-inline-start: 0;
         background-color: #f6f6f6;
         border-radius: 25px;
